2003-08-14  Niklas Knutsson  <nq@altern.org>

	* Fix loading of argument names for builtin functions
	* Do not add argument names in code for builtin functions, read from definitions file instead
	* Fix crash when creating new unit
	* Disable OK button for editing global definitions until structure is sorted out
	* Beautify dialogs
	* Functions, variables and units buttons in main window
	* Sorting menus
	* Tree lists implemented for units, variables and functions dialogs
	* Submenus implemented for unit, variable and function menus
	* Connect "convert to"-button in unit managaer to new conversion system
	* Complete set of SI units
	* Various fixes

2003-08-13  Niklas Knutsson  <nq@altern.org>

	* Remove duplicate functions
	* Do not save unchanged global definitions in users definitions files
	* Selectable prefix in result
	* Fully functional unit conversion!

2003-08-12  Niklas Knutsson  <nq@altern.org>

	* Interpret "apple" as an unknown variable named apple
	* Add base conversion dialog
	* Beautify units dialog
	* Store pointer to unit in GUI to simplify the Unit/ComplexUnit mess
	* Enable editing/creation of composite units
	* New Greatest Common Divisor (gcd) function
	* First try at differentiation
	* Fix division

2003-08-11  Niklas Knutsson  <nq@altern.org>

	* Beautify insert function dialog
	* Populate category combos
	* Turn base unit combo into entry as it probably is not a good idea to fill the combo with all units
	* Gladeify the variable and function edit dialogs hidden callbacks.cc (gladeification finished?)
	* Beautification of dialogs
	* Huge gladeification of signals and widget references

2003-08-10  Sven Herzberg  <herzi@gnome-de.org>

	* data/qalculate.glade: don't know what exactly, but i'm sure that we
	got rid of one c dialog more
	* src/callbacks.cc:
	* src/interface.cc:

2003-08-10  Niklas Knutsson  <nq@altern.org>

	* Use <sup></sup> for all exponents for consistency
	* New elegant and intelligent sorting, not only for internal purposes