@@ -202,6 +202,8 @@ void on_button_functions_clicked(GtkButton *button, gpointer user_data);
 void on_button_variables_clicked(GtkButton *button, gpointer user_data);
 void on_button_units_clicked(GtkButton *button, gpointer user_data);
 
+void on_menu_item_about_activate(GtkMenuItem *w, gpointer user_data);
+
 }
 
 
